# MEngineGL

./: .gitignore  CMakeLists.txt  CMakePresets.json  UML.puml  vcpkg.json
Common/: CMakeLists.txt
Common/include/: Configure.hpp  IConfigure.hpp  ILogger.hpp  Logger.hpp  Spdlogger.hpp  Type.hpp
Common/src/: Configure.cpp  Logger.cpp  Spdlogger.cpp
Core/: CMakeLists.txt
Core/include/: Math.hpp  Reflection.hpp  UUID.hpp
Core/include/Asset/: Asset.hpp  CustomMaterial.hpp  Folder.hpp  Material.hpp  Mesh.hpp  Model.hpp  PBRMaterial.hpp  PhongMaterial.hpp  Pipeline.hpp  Prefab.hpp  Scene.hpp  Texture.hpp  Texture2D.hpp
Core/include/Entity/: Entity.hpp  Folder.hpp  IEntity.hpp  IMaterial.hpp  IMesh.hpp  IPipeline.hpp  IShader.hpp  ITexture.hpp  Material.hpp  Mesh.hpp  Model.hpp  PBRMaterial.hpp  Pipeline.hpp  Shader.hpp  StandardMaterial.hpp  Texture2D.hpp
Core/include/Manager/: IManager.hpp  Manager.hpp  MaterialManager.hpp  ShaderManager.hpp
Core/include/Repository/: FolderRepository.hpp  IRepository.hpp  MaterialRepository.hpp  MeshRepository.hpp  ModelRepository.hpp  PBRMaterialRepository.hpp  PipelineRepository.hpp  Repository.hpp  ShaderRepository.hpp  StandardMaterialRepository.hpp  TextureRepository.hpp
Core/src/: MaterialManager.cpp  ShaderManager.cpp  UUID.cpp
Core/src/Entity/: Material.cpp  Mesh.cpp  Model.cpp  PBRMaterial.cpp  Pipeline.cpp  Shader.cpp  StandardMaterial.cpp  Texture2D.cpp
Core/src/Repository/: MaterialRepository.cpp  MeshRepository.cpp  PBRMaterialRepository.cpp  PipelineRepository.cpp  ShaderRepository.cpp  StandardMaterialRepository.cpp  TextureRepository.cpp
Function/: CMakeLists.txt
Function/include/: AssetManager.hpp  Scene.hpp  SceneManager.hpp
Function/include/Component/: AssestComponent.hpp  CameraComponent.hpp  Component.hpp  LightComponent.hpp  MaterialComponent.hpp  MeshComponent.hpp  Reflection.hpp  TextureComponent.hpp  TransformComponent.hpp
Function/include/System/: CameraSystem.hpp  ISystem.hpp  MaterialSystem.hpp  RenderSystem.hpp  System.hpp  TransformSystem.hpp
Function/src/: AssetManager.cpp
Function/src/System/: CameraSystem.cpp  MaterialSystem.cpp  RenderSystem.cpp  TransformSystem.cpp
Resource/: CMakeLists.txt  appsettings.json
Resource/Assets/Shaders/: default.frag  forward.frag  forward.vert
Resource/Shader/: forward.frag  forward.vert
Resource/include/: AssetDatabase.hpp  AssetManager.hpp  BasicGeometryFactory.hpp  Handle.hpp  PipelineFactory.h  ResourceManager.hpp
Resource/include/Asset/: Asset.hpp  Folder.hpp  Model.hpp  PBRMaterial.hpp  PhongMaterial.hpp  Pipeline.hpp  Prefab.hpp  Texture.hpp
Resource/include/Importer/: AssetImporter.hpp  AudioImporter.hpp  ComputeShaderImporter.hpp  FBXImporter.hpp  Mesh3DSImporter.hpp  NativeFormatImporter.hpp  PluginImporter.hpp  PrefabImporter.hpp  ShaderImporter.hpp  TextScriptImporter.hpp  TextureImporter.hpp
Resource/src/: AssetDatabase.cpp  AssetManager.cpp  BasicGeometryFactory.cpp  PipelineFactory.cpp
Resource/src/Importer/: AssetImporter.cpp  AudioImporter.cpp  ComputeShaderImporter.cpp  FBXImporter.cpp  Mesh3DSImporter.cpp  NativeFormatImporter.cpp  PluginImporter.cpp  PrefabImporter.cpp  ShaderImporter.cpp  TextScriptImporter.cpp  TextureImporter.cpp
Test/: CMakeLists.txt
Test/Common/: CMakeLists.txt  PropertyTest.cpp
Test/Core/: CMakeLists.txt  ReflTest.cpp  SerializeTest.cpp  ShaderManagerTest.cpp  Texture2DTest.cpp  UUIDTest.cpp
Test/Resource/: CMakeLists.txt  ResourceManagerTest.cpp
Test/Resource/Unit/: AssetDatabaseTest.cpp  CMakeLists.txt
Tool/: CMakeLists.txt
Tool/entry/: EditorEntry.cpp
Tool/include/Editor/: Editor.hpp  MEngineEditor.hpp  SceneManager.hpp
Tool/src/Editor/: Editor.cpp  MEngineEditor.cpp
