file(GLOB_RECURSE RESOURCE  ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
set_source_files_properties(${SOURCE_FILES} PROPERTIES CMAKE_CONFIGURE_DEPENDS ON)
find_package(glfw3 CONFIG REQUIRED)
find_path(BEXT_DI_INCLUDE_DIRS "boost/di.hpp")
add_executable(EditorEntry ${RESOURCE} entry/EditorEntry.cpp)
target_include_directories(EditorEntry PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(EditorEntry PUBLIC Function)
 target_link_libraries(EditorEntry PRIVATE glfw)
target_include_directories(EditorEntry PRIVATE ${BEXT_DI_INCLUDE_DIRS})
