find_package(GTest CONFIG REQUIRED)
find_package(glfw3 CONFIG REQUIRED)
find_package(glad CONFIG REQUIRED)
add_executable(ResourceManagerTest ResourceManagerTest.cpp)
add_test(NAME ResourceManagerTest COMMAND ResourceManagerTest)
target_link_libraries(ResourceManagerTest PUBLIC Resource GTest::gtest GTest::gtest_main glfw glad::glad)