find_package(GTest CONFIG REQUIRED)
find_package(glfw3 CONFIG REQUIRED)
find_package(glad CONFIG REQUIRED)
add_executable(AssetDatabaseTest AssetDatabaseTest.cpp)
add_test(NAME AssetDatabaseTest COMMAND AssetDatabaseTest)
target_link_libraries(AssetDatabaseTest PUBLIC Resource GTest::gtest GTest::gtest_main glfw glad::glad)